# cpp-algo-example

./: Cargo.toml  README.md  build.rs
cpp_algo/: AlgoInterface.cpp  AlgoInterface.h  CMakeLists.txt
cpp_algo/core/include/: cpp_algo.h
cpp_algo/core/src/: cpp_algo.cpp
src/: bridge.rs
